--- a/Walks.API/appsettings.json
+++ b/Walks.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Walks": "Server=localhost, 1433;Database=WalksDb;User Id=sa;Password=Start123!;"
+  }
 }
