Running EF Core Migrations

--- a/Walks.API/appsettings.json
+++ b/Walks.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Walks": "Server=localhost, 1433;Database=WalksDb;User Id=sa;Password=Start123!;"
+    "Walks": "Server=localhost, 1433;Database=WalksDb;User Id=sa;Password=Start123!;TrustServerCertificate=true;"
   }
 }
