--- a/Walks.API/appsettings.json
+++ b/Walks.API/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Walks": "Server=localhost, 1433;Database=WalksDb;User Id=sa;Password=Start123!;TrustServerCertificate=true;"
+  },
+  "Jwt": {
+    "Key": "jh7H7HKJy87yhjhhjkh7ykjhIUHh87yhhjg7h",
+    "Issuer": "http://localhost:5230/",
+    "Audience": "http://localhost:5230/"
   }
 }
